<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_has_been_blocked_text">Your account has been blocked.\nThis functions are not available.</string>
    <string name="action_add_to_favorites">Add to Favorites</string>
    <string name="action_balance">Balance</string>
    <string name="action_block">Will be available after setting the wallpaper</string>
    <string name="action_continue">Continue</string>
    <string name="action_delete_publication">Delete a publication</string>
    <string name="action_download">Download</string>
    <string name="action_edit">Edit</string>
    <string name="action_failed_add_to_favorites">Failed add to favorites</string>
    <string name="action_failed_remove_from_favorites">Failed remove from favorites</string>
    <string name="action_filter">Filters</string>
    <string name="action_hint">Hint</string>
    <string name="action_info">Show info</string>
    <string name="action_remove_from_favorites">Remove from Favorites</string>
    <string name="action_report_publication">Report</string>
    <string name="action_set">Set</string>
    <string name="action_user_more">More</string>
    <string name="action_user_settings">Settings</string>
    <string name="ad">Ad</string>
    <string name="ad_mob_app_id">ca-app-pub-1017087655893301~5130797661</string>
    <string name="ad_units">Ad Units</string>
    <string name="ads_sdk_version">SDK Version</string>
    <string name="advertisement_network_settings">Advertisement Network Settings</string>
    <string name="age_restricted_user">Age Restricted User</string>
    <string name="agreement_text_body"> &lt;p&gt; This document outlines what constitutes acceptable use of contents and services of the Wallcraft mobile application, available in the Google Play store at the &lt;a href=http://play.google.com/store/apps/details?id=com.wallpaperscraft.wallpaper&gt;link&lt;/a&gt;.  &lt;/p&gt; &lt;p&gt; Please read these Terms carefully before using the Wallcraft mobile application (\"Mobile application\", \"application\" or \"App\") developed by &lt;a href=https://eastwood.com.ru/&gt;Eastwood&lt;/a&gt; company (the \"Developer\"). Downloading and using this App you confirm the accepting and compliance with these Terms. The Terms apply to all users, who downloaded and installed Wallcraft app. By using this application and downloading files, you acknowledge that you have read and agreed with the Terms. If you disagree with any of the terms, you must stop using the App, uninstall the App on your device and remove the content, uploaded from the Wallcraft application.  &lt;/p&gt; &lt;p&gt; This agreement may be revised or updated without notice.  &lt;/p&gt; &lt;h5&gt;Overview &lt;/h5&gt; &lt;p&gt; Wallcraft application allows you a free download of the images and to use them only as a desktop Wallpaper.  &lt;/p&gt; &lt;p&gt; All of the content in the App received from open sources on the internet and it\'s protected by the copyright. The copyright of the images belong to their respective owners.  &lt;/p&gt; &lt;p&gt; The user agrees that all contents and services in the App may be accompanied by advertising. The user agrees that application Developer does not bear any responsibility and does not have any obligations in relation with such advertising.  &lt;/p&gt; &lt;h5&gt;Copyright&lt;/h5&gt; &lt;p&gt; All images posted in the App, received from the &lt;a href=https://www.wallpaperscraft.com/&gt;wallpaperscraft.com&lt;/a&gt; web site. &lt;/p&gt; &lt;p&gt; Although published content is believed to be authorized for sharing and personal use as a desktop wallpaper, unless otherwise noted in the wallpaper description. All images in this App are copyrighted by their respective authors. If you want to use these images in any other way you must get permission from their respective authors. Application Developer is not responsible for the misuse of content posted in the App.  &lt;/p&gt; &lt;p&gt; Developer do not take any responsibility for any damage caused through usage of these files.&lt;br/&gt; If you are the author and you want unauthorized content to be removed from Wallcraft application, please read the &lt;a href=https://wallpaperscraft.com/copyright&gt;Copyright&lt;/a&gt; and contact us.  &lt;/p&gt; &lt;p&gt;&lt;b&gt; The user confirms that he is familiar with all clauses of this terms and accepts them unconditionally. &lt;/b&gt;&lt;/p&gt; </string>
    <string name="agreement_text_foot">&lt;/body&gt;&lt;/html&gt;</string>
    <string name="agreement_text_head" formatted="false"> &lt;!DOCTYPE html&gt;&lt;html&gt;&lt;head&gt;&lt;meta http-equiv=Content-Type content=text/html; charset=utf-8 /&gt;&lt;title&gt;&lt;/title&gt;&lt;style&gt; html { width:99%; height:100%; margin:0px; padding:0px; } body { width:99%; height:100%; margin:0px; padding:0px; font-size:12px; color:#FFFFFF; } h5 { font-size:14px; } h1 { color:#FFFFFF; } a { white-space: nowrap; color:#828EAD; } p { color:#FFFFFF; } h5 { color:#FFFFFF; } li { color:#FFFFFF; } * { -webkit-user-select: none; } &lt;/style&gt;&lt;/head&gt;&lt;body&gt; </string>
    <string name="agreement_title">Terms of service</string>
    <string name="ai_artist_my_wallpapers_empty_feed">You don\'t have generated wallpapers yet</string>
    <string name="ai_artist_single_feed_title">AI Artist</string>
    <string name="ai_artist_subscription_text_a">Subscribe and get access to the wallpaper generator</string>
    <string name="ai_artist_subscription_text_b">Subscribe and get access to the wallpaper generator and AI Artist’s gallery without ads</string>
    <string name="ai_artist_subscription_text_c">Subscribe and get access to the wallpaper generator and gallery of AI Artist</string>
    <string name="ai_artist_subscription_title">AI Artist Vanilla Sky</string>
    <string name="al_exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="al_exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="al_exo_controls_custom_playback_speed">%1$.2fx</string>
    <string name="al_exo_controls_fastforward_description">Fast forward</string>
    <string name="al_exo_controls_fullscreen_enter_description">Enter fullscreen</string>
    <string name="al_exo_controls_fullscreen_exit_description">Exit fullscreen</string>
    <string name="al_exo_controls_hide">Hide player controls</string>
    <string name="al_exo_controls_next_description">Next</string>
    <string name="al_exo_controls_overflow_hide_description">Hide additional settings</string>
    <string name="al_exo_controls_overflow_show_description">Show additional settings</string>
    <string name="al_exo_controls_pause_description">Pause</string>
    <string name="al_exo_controls_play_description">Play</string>
    <string name="al_exo_controls_playback_speed">Speed</string>
    <string name="al_exo_controls_playback_speed_normal">Normal</string>
    <string name="al_exo_controls_previous_description">Previous</string>
    <string name="al_exo_controls_repeat_all_description">Repeat all</string>
    <string name="al_exo_controls_repeat_off_description">Repeat none</string>
    <string name="al_exo_controls_repeat_one_description">Repeat one</string>
    <string name="al_exo_controls_rewind_description">Rewind</string>
    <string name="al_exo_controls_seek_bar_description">Playback progress</string>
    <string name="al_exo_controls_settings_description">Settings</string>
    <string name="al_exo_controls_show">Show player controls</string>
    <string name="al_exo_controls_shuffle_off_description">Shuffle off</string>
    <string name="al_exo_controls_shuffle_on_description">Shuffle on</string>
    <string name="al_exo_controls_stop_description">Stop</string>
    <string name="al_exo_controls_time_placeholder">00:00:00</string>
    <string name="al_exo_controls_vr_description">VR mode</string>
    <string name="al_exo_download_completed">Download completed</string>
    <string name="al_exo_download_description">Download</string>
    <string name="al_exo_download_downloading">Downloading</string>
    <string name="al_exo_download_failed">Download failed</string>
    <string name="al_exo_download_notification_channel_name">Downloads</string>
    <string name="al_exo_download_paused">Downloads paused</string>
    <string name="al_exo_download_paused_for_network">Downloads waiting for network</string>
    <string name="al_exo_download_paused_for_wifi">Downloads waiting for WiFi</string>
    <string name="al_exo_download_removing">Removing downloads</string>
    <string name="al_exo_item_list">%1$s, %2$s</string>
    <string name="al_exo_track_bitrate">%1$.2f Mbps</string>
    <string name="al_exo_track_mono">Mono</string>
    <string name="app_name">WallpapersCraft</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="feed_empty">There is no wallpapers in this category for your phone</string>
    <string name="navigation_item_ai_artist_subscription">Subscription AI Artist</string>
    <string name="navigation_item_basic_subscription">Basic subscription</string>
    <string name="navigation_item_changer">Wallpaper Changer</string>
    <string name="navigation_item_favorites">Favorites</string>
    <string name="navigation_item_history">History</string>
    <string name="navigation_item_home">Home</string>
    <string name="navigation_item_instagram">Our Instagram</string>
    <string name="navigation_item_join">Join as an artist</string>
    <string name="navigation_item_settings">Settings</string>
    <string name="navigation_item_shop">Shop</string>
    <string name="navigation_item_support">Support</string>
    <string name="navigation_item_terms_and_privacy">Terms &amp; Privacy</string>
    <string name="navigation_item_tiktok">Our TikTok</string>
    <string name="site_url_title">WallpapersCraft.com</string>
    <string name="static_single_feed_title">Static</string>
    <string name="welcome_google_sign_in">Login with Google</string>
</resources>