<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:background="@color/main_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/scroll_content"
        android:descendantFocusability="blocksDescendants"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:id="@+id/site_url_layout"
            android:background="@drawable/nav_header_background"
            android:paddingTop="@dimen/spacing_x_large"
            android:paddingBottom="@dimen/layout_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/nav_header_height"
            android:layout_marginBottom="8dp"
            android:paddingStart="@dimen/layout_horizontal_margin"
            android:paddingEnd="@dimen/layout_horizontal_margin">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/header_image"
                android:layout_width="@dimen/nav_header_logo_size"
                android:layout_height="@dimen/nav_header_logo_size"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_logo"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/main_white_alpha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/site_url_title"
                android:paddingStart="@dimen/spacing_normal"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/main_yellow"
            android:gravity="center_vertical"
            android:id="@+id/item_sign_in"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/welcome_google_sign_in"
            android:textAllCaps="true"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="@dimen/spacing_m_large"
            android:paddingEnd="@dimen/spacing_m_large"/>
        <com.demo.wallpaperscraft.ui.views.SideMenuItem
            android:id="@+id/item_all"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:image="@drawable/ic_logo_menu"
            app:text="@string/navigation_item_home"/>
        <com.demo.wallpaperscraft.ui.views.SideMenuItem
            android:id="@+id/item_changer"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:image="@drawable/ic_changer"
            app:text="@string/navigation_item_changer"/>
        <com.demo.wallpaperscraft.ui.views.SideMenuItem
            android:id="@+id/item_favorites"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:image="@drawable/ic_favorites_fill"
            app:text="@string/navigation_item_favorites"/>
        <com.demo.wallpaperscraft.ui.views.SideMenuItem
            android:id="@+id/item_history"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:image="@drawable/ic_history"
            app:text="@string/navigation_item_history"/>
        <com.demo.wallpaperscraft.ui.views.SideMenuItem
            android:id="@+id/item_shop"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:image="@drawable/ic_shop"
            app:text="@string/navigation_item_shop"/>
        <com.demo.wallpaperscraft.ui.views.SideMenuItem
            android:id="@+id/item_remove_ads"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:image="@drawable/ic_crown"
            app:text="@string/navigation_item_basic_subscription"/>
        <com.demo.wallpaperscraft.ui.views.SideMenuItem
            android:id="@+id/item_ai_artist_subscription"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:image="@drawable/ic_palette"
            app:text="@string/navigation_item_ai_artist_subscription"/>
        <com.demo.wallpaperscraft.ui.views.SideMenuItem
            android:id="@+id/item_settings"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:image="@drawable/ic_settings"
            app:text="@string/navigation_item_settings"/>
        <com.demo.wallpaperscraft.ui.views.SideMenuItem
            android:id="@+id/item_support"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:image="@drawable/ic_email"
            app:text="@string/navigation_item_support"/>
        <com.demo.wallpaperscraft.ui.views.SideMenuItem
            android:id="@+id/item_tiktok"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:image="@drawable/ic_tiktoc"
            app:text="@string/navigation_item_tiktok"/>
        <com.demo.wallpaperscraft.ui.views.SideMenuItem
            android:id="@+id/item_join"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:image="@drawable/ic_join"
            app:text="@string/navigation_item_join"/>
        <com.demo.wallpaperscraft.ui.views.SideMenuItem
            android:id="@+id/item_instagram"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:image="@drawable/ic_instagram"
            app:text="@string/navigation_item_instagram"/>
        <com.demo.wallpaperscraft.ui.views.SideMenuItem
            android:id="@+id/item_terms_and_privacy"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:image="@drawable/ic_info_white"
            app:text="@string/navigation_item_terms_and_privacy"/>
        <View
            android:background="@color/side_menu_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginBottom="@dimen/spacing_normal"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/content_list_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>