<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/category_parent"
    android:background="@color/main_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@+id/app_toolbar"
        android:background="@color/main_back"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="@color/main_back"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            app:layout_scrollFlags="enterAlwaysCollapsed|enterAlways|scroll"
            app:navigationIcon="@drawable/ic_arrow_back_white"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/static_single_feed_title"/>
        <com.demo.wallpaperscraft.ui.views.SortButton
            android:id="@+id/sort_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </com.google.android.material.appbar.AppBarLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/content_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/content_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        <com.demo.wallpaperscraft.ui.views.EmptyView
            android:layout_gravity="center"
            android:id="@+id/content_empty"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:e_image="@drawable/ic_image"
            app:e_text="@string/feed_empty"/>
        <com.demo.wallpaperscraft.ui.views.ErrorView
            android:layout_gravity="center"
            android:id="@+id/error_view"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/toolbar_height"/>
        <com.demo.wallpaperscraft.ui.views.ProgressWheel
            android:id="@+id/progress"
            android:layout_marginBottom="@dimen/toolbar_height"
            style="@style/IndeterminateProgressBar"/>
    </FrameLayout>
    <FrameLayout
        android:layout_gravity="end|bottom"
        android:id="@+id/image_add_button_wrapper"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.demo.wallpaperscraft.ui.views.ShadowLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginEnd="@dimen/spacing_normal"
            app:sl_cornerRadius="50dp"
            app:sl_dx="0dp"
            app:sl_dy="2dp"
            app:sl_shadowColor="#40000000"
            app:sl_shadowRadius="8dp">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_add_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_button_add"/>
        </com.demo.wallpaperscraft.ui.views.ShadowLayout>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>